[package]
name = "font-engine"
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0-or-later"
[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
alice-font = { path = "../../../ALICE-Font", optional = true }
[features]
default = []
alice-core = ["alice-font"]
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
